k8-deployment/audio/audio-ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: audio-ingres-route
  namespace: apps
  annotations: 
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`demo-audio.anup.co.in`)
      kind: Rule
      services:
        - name: audio-svc-canary
          port: 3000
      middlewares:
        - name: default-headers
          namespace: traefik
  tls:
    secretName: demo-cert
